--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@ body{
     font-family: 'Montserrat', sans-serif;
     font-family: 'Roboto', sans-serif;
     background-color: #FFF;;
+    color: #434455
 }
 
 ul{
