--- a/css/styles.css
+++ b/css/styles.css
@@ -19,8 +19,6 @@ a{
     height: 1px;
     margin: -1px;
     border: 0;
-    padding: 0;
-    
     white-space: nowrap;
     clip-path: inset(100%);
     clip: rect(0 0 0 0);
@@ -41,8 +39,7 @@ a{
     color: var(--IRIS, #4D5AE5);
 }
 
-  .header>
- {
+  .header {
 }
 .header-navigation {
 }
