--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,7 @@ a{
   /* Header */
   .header-logo{
     color: var(--NAVY-BLUE, #2E2F42);
-    font-family: Raleway;
+    font-family: 'Raleway', sans-serif;
     font-size: 18px;
     font-weight: 700;
     line-height: 1.26;
@@ -36,7 +36,7 @@ a{
   }
 
   .header-logo-color {
-    color: var(--IRIS, #4D5AE5);
+    color: #4D5AE5;
 }
 
   .header {
@@ -49,9 +49,9 @@ a{
 .header-menu-item {
 }
 .header-menu-link {
-    color: var(--SLATE, #434455);
+    color:  #2e2f42;
     font-size: 16px;
-    font-weight: 400;
+    font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.02em;
 }
@@ -202,7 +202,7 @@ letter-spacing: 0.02em;
 }
 .footer-logo {
   color: var(--CLOUD, #F4F4FD);
-font-family: Raleway;
+  font-family: 'Raleway', sans-serif;
 font-size: 18px;
 font-weight: 700;
 line-height: 1.16;
