--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 body{
     font-family: 'Montserrat', sans-serif;
     font-family: 'Roboto', sans-serif;
-    background-color: #FFF;;
+    background-color: #FFFFFF;
     color: #434455
 }
 
@@ -127,9 +127,9 @@ letter-spacing: 0.02em;
 }
 
 /* Team */
-.team {
-  background: var(--CLOUD, #F4F4FD);
-}
+/* .team {
+  background: #FFFFFF;
+} */
 
 .team-title {
   color: var(--NAVY-BLUE, #2E2F42);
@@ -201,11 +201,11 @@ letter-spacing: 0.02em;
   background: var(--NAVY-BLUE, #2E2F42);
 }
 .footer-logo {
-  color: var(--CLOUD, #F4F4FD);
+  color: #4d5ae5;
   font-family: 'Raleway', sans-serif;
 font-size: 18px;
 font-weight: 700;
-line-height: 1.16;
+line-height: 1.17;
 letter-spacing: 0.03em;
 text-transform: uppercase;
 }
