--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,7 @@ a{
     font-family: 'Raleway', sans-serif;
     font-size: 18px;
     font-weight: 700;
-    line-height: 1.26;
+    line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
   }
@@ -49,7 +49,7 @@ a{
 .header-menu-item {
 }
 .header-menu-link {
-    color:  #2e2f42;
+    color:  #434455;
     font-size: 16px;
     font-weight: 500;
     line-height: 1.5;
@@ -127,9 +127,9 @@ letter-spacing: 0.02em;
 }
 
 /* Team */
-/* .team {
+.team {
   background: #FFFFFF;
-} */
+}
 
 .team-title {
   color: var(--NAVY-BLUE, #2E2F42);
