--- a/css/styles.css
+++ b/css/styles.css
@@ -5,8 +5,20 @@ body{
     color: #434455
 }
 
+p, h1, h2, h3, h4, h5, h6{
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
 ul{
     list-style: none;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 0;
+}
+
+img{
+  display: block;
 }
 
 a{
@@ -21,6 +33,15 @@ a{
     clip: rect(0 0 0 0);
     overflow: hidden;
   }
+
+.container{
+  max-width: 1440px;
+  width: 100%;
+  padding-left: 156px;
+  padding-right: 156px;
+  margin: 0 auto;
+}
+
   /* Header */
   .header-logo{
     color: #4d5ae5;
@@ -37,6 +58,8 @@ a{
 }
 
   .header {
+    padding-top: 24px;
+    padding-bottom: 24px;
 }
 .header-navigation {
 }
@@ -82,6 +105,14 @@ color: #404BBF;
 .hero {
   background: var(--NAVY-BLUE, #2E2F42);
 }
+
+  .hero-container{
+  padding-top: 188px;
+  padding-right: 472px;
+  padding-bottom: 292px;
+  padding-left: 472px;
+}
+
 .hero-title {
   color: var(--WHITE, #FFF);
   text-align: center;
@@ -89,6 +120,7 @@ color: #404BBF;
   font-weight: 700;
   line-height: 1.07;
   letter-spacing: 0.02em;
+  margin-bottom: 32px;
 }
 .hero-button {
   background: var(--IRIS, #4D5AE5);
@@ -99,6 +131,8 @@ color: #404BBF;
   line-height: 1.5;
   letter-spacing: 0.04em;
   cursor: pointer;
+  display: block;
+  margin: 0 auto;
 }
 
 .hero-button:hover,
@@ -109,10 +143,14 @@ color: #404BBF;
 
 /* Best Sides */
 .best-sides {
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 .visually-hidden {
 }
 .best-sides-list {
+  display: flex;
+  gap: 24px;
 }
 .best-sides-list-item {
 }
@@ -133,6 +171,8 @@ letter-spacing: 0.02em;
 /* Team */
 .team {
   background-color: #F4F4FD;
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 
 .team-title {
@@ -142,15 +182,24 @@ font-size: 36px;
 line-height: 1.11;
 letter-spacing: 0.02em;
 text-transform: capitalize;
+margin-bottom: 72px;
 }
 
 .team-list {
+  display: flex;
+  gap: 24px;
 }
+
 .team-item {
   background-color: #FFFFFF;
+  border-radius: 0px 0px 4px 4px;
+background: var(--WHITE, #FFF);
+box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 .img {
+  margin-bottom: 32px;
 }
+
 .tastte-subtitle {
   color: var(--NAVY-BLUE, #2E2F42);
 text-align: center;
@@ -158,6 +207,7 @@ font-size: 20px;
 font-weight: 500;
 line-height: 1.2;
 letter-spacing: 0.02em;
+margin-bottom: 8px;
 }
 .taste-text {
   color: var(--SLATE, #434455);
@@ -165,11 +215,13 @@ text-align: center;
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
+margin-bottom: 32px;
 }
 
 /* Porfolio */
 
 .portfolio {
+  padding-bottom: 120px;
 }
 .porfolio-title {
   color: var(--NAVY-BLUE, #2E2F42);
@@ -178,12 +230,19 @@ font-size: 36px;
 line-height: 1.11;
 letter-spacing: 0.02em;
 text-transform: capitalize;
+padding-top: 120px;
+margin-bottom: 72px;
 }
 .portfolio-list {
 }
 .portfolio-item {
+  text-align: center;
+  border-radius: 0px 0px 4px 4px;
+  border: 1px solid var(--CORNFLOWER, #E7E9FC);
+  background: var(--WHITE, #FFF);
 }
 .portfolio-img {
+  margin-bottom: 32px;
 }
 .porfolio-subtitle {
   color: var(--NAVY-BLUE, #2E2F42);
@@ -191,19 +250,22 @@ font-size: 20px;
 font-weight: 500;
 line-height: 1.2;
 letter-spacing: 0.02em;
-
+margin-bottom: 8px;
 }
 .porfolio-text {
   color: var(--SLATE, #434455);
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
+margin-bottom: 48px;
 }
 
 /* Footer */
 
 .footer {
   background: var(--NAVY-BLUE, #2E2F42);
+  padding: 140px 1020px 100px 156px;
+
 }
 .footer-logo {
   color: #4d5ae5;
@@ -213,6 +275,7 @@ font-weight: 700;
 line-height: 1.17;
 letter-spacing: 0.03em;
 text-transform: uppercase;
+margin-bottom: 17.5px;
 }
 .footer-logo-color {
   color: #f4f4fd
