--- a/css/styles.css
+++ b/css/styles.css
@@ -35,10 +35,8 @@ a{
   }
 
 .container{
-  max-width: 1440px;
-  width: 100%;
-  padding-left: 156px;
-  padding-right: 156px;
+  max-width: 1158px;
+  padding: 0 15px;
   margin: 0 auto;
 }
 
@@ -55,17 +53,29 @@ a{
 
   .header-logo-color {
     color: #2e2f42;
+    margin-right: 76px;
 }
 
   .header {
     padding-top: 24px;
     padding-bottom: 24px;
+    border-bottom: 1px solid var(--CORNFLOWER, #E7E9FC);
 }
 .header-navigation {
+  display: flex;
+  flex-grow: 1;
 }
 
 .header-menu {
+  display: flex;
+  gap: 40px;
+  align-items: center;
 }
+
+.header-container{
+  display: flex;
+}
+
 .header-menu-item {
 }
 .header-menu-link {
@@ -85,7 +95,10 @@ color: #404BBF;
 .contact-adress {
   font-style: normal;
 }
+
 .contact-list {
+  display: flex;
+  gap: 40px;
 }
 .contact-list-item {
 }
@@ -106,7 +119,7 @@ color: #404BBF;
   background: var(--NAVY-BLUE, #2E2F42);
 }
 
-  .hero-container{
+.hero-container{
   padding-top: 188px;
   padding-right: 472px;
   padding-bottom: 292px;
@@ -120,8 +133,10 @@ color: #404BBF;
   font-weight: 700;
   line-height: 1.07;
   letter-spacing: 0.02em;
-  margin-bottom: 32px;
+  width: 496px;
+  margin: 0 48px auto;
 }
+
 .hero-button {
   background: var(--IRIS, #4D5AE5);
   color: var(--WHITE, #FFF);
@@ -133,6 +148,9 @@ color: #404BBF;
   cursor: pointer;
   display: block;
   margin: 0 auto;
+  padding: 16px 32px;
+  border-radius: 4px;
+  border: 0;
 }
 
 .hero-button:hover,
@@ -153,13 +171,14 @@ color: #404BBF;
   gap: 24px;
 }
 .best-sides-list-item {
+  width: calc((100% - 24px * 3) / 4)
 }
 .best-sides-subtitle {
   color: var(--NAVY-BLUE, #2E2F42);
-font-size: 20px;
-font-weight: 500;
-line-height: 1.2;
-letter-spacing: 0.02em;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
 }
 .best-sides-text {
   color: var(--SLATE, #434455);
@@ -221,6 +240,7 @@ margin-bottom: 32px;
 /* Porfolio */
 
 .portfolio {
+  padding-top: 120px;
   padding-bottom: 120px;
 }
 .porfolio-title {
@@ -230,17 +250,22 @@ font-size: 36px;
 line-height: 1.11;
 letter-spacing: 0.02em;
 text-transform: capitalize;
-padding-top: 120px;
 margin-bottom: 72px;
 }
 .portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
 }
 .portfolio-item {
   text-align: center;
   border-radius: 0px 0px 4px 4px;
   border: 1px solid var(--CORNFLOWER, #E7E9FC);
   background: var(--WHITE, #FFF);
+  width: calc((100% - 24px * 2) / 3);
+  margin-bottom: 48px;
 }
+
 .portfolio-img {
   margin-bottom: 32px;
 }
@@ -257,7 +282,7 @@ margin-bottom: 8px;
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
-margin-bottom: 48px;
+margin-bottom: 32px;
 }
 
 /* Footer */
