--- a/css/styles.css
+++ b/css/styles.css
@@ -49,11 +49,11 @@ a{
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
+    margin-right: 76px;
   }
 
   .header-logo-color {
     color: #2e2f42;
-    margin-right: 76px;
 }
 
   .header {
@@ -64,6 +64,7 @@ a{
 .header-navigation {
   display: flex;
   flex-grow: 1;
+  align-items: center;
 }
 
 .header-menu {
@@ -84,6 +85,7 @@ a{
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    padding: 24px 0;
 }
 
 .header-menu-link:hover,
@@ -116,14 +118,12 @@ color: #404BBF;
 
 /* Hero */
 .hero {
+  padding-top: 188px;
+  padding-bottom: 188px;
   background: var(--NAVY-BLUE, #2E2F42);
 }
 
 .hero-container{
-  padding-top: 188px;
-  padding-right: 472px;
-  padding-bottom: 292px;
-  padding-left: 472px;
 }
 
 .hero-title {
@@ -133,8 +133,8 @@ color: #404BBF;
   font-weight: 700;
   line-height: 1.07;
   letter-spacing: 0.02em;
-  width: 496px;
-  margin: 0 48px auto;
+  max-width: 496px;
+  margin: 0 auto;
 }
 
 .hero-button {
@@ -151,6 +151,8 @@ color: #404BBF;
   padding: 16px 32px;
   border-radius: 4px;
   border: 0;
+  min-width: 169px;
+  margin-top: 48px;
 }
 
 .hero-button:hover,
@@ -165,6 +167,16 @@ color: #404BBF;
   padding-bottom: 120px;
 }
 .visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 .best-sides-list {
   display: flex;
@@ -179,6 +191,7 @@ color: #404BBF;
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.02em;
+  margin-bottom: 8px;
 }
 .best-sides-text {
   color: var(--SLATE, #434455);
