--- a/css/styles.css
+++ b/css/styles.css
@@ -232,7 +232,7 @@ box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47,
   margin-bottom: 32px;
 }
 
-.tastte-subtitle {
+.taste-subtitle {
   color: var(--NAVY-BLUE, #2E2F42);
 text-align: center;
 font-size: 20px;
@@ -248,6 +248,10 @@ font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
 margin-bottom: 32px;
+}
+
+.first-pic-name{
+  padding: 32px 0;
 }
 
 /* Porfolio */
