--- a/css/styles.css
+++ b/css/styles.css
@@ -260,6 +260,13 @@ margin-bottom: 32px;
   padding-top: 120px;
   padding-bottom: 120px;
 }
+
+.portfolio-container{
+  padding: 32px 16px;
+  border: 1px solid #E7E9FC;
+  border-top: none;
+}
+
 .porfolio-title {
   color: var(--NAVY-BLUE, #2E2F42);
 text-align: center;
@@ -273,14 +280,13 @@ margin-bottom: 72px;
   display: flex;
   flex-wrap: wrap;
   gap: 24px;
+  row-gap: 48px;
 }
 .portfolio-item {
   text-align: center;
   border-radius: 0px 0px 4px 4px;
-  border: 1px solid var(--CORNFLOWER, #E7E9FC);
   background: var(--WHITE, #FFF);
   width: calc((100% - 24px * 2) / 3);
-  margin-bottom: 48px;
 }
 
 .portfolio-img {
@@ -292,7 +298,6 @@ font-size: 20px;
 font-weight: 500;
 line-height: 1.2;
 letter-spacing: 0.02em;
-margin-bottom: 8px;
 }
 .porfolio-text {
   color: var(--SLATE, #434455);
@@ -306,18 +311,18 @@ padding-bottom: 32px;
 
 .footer {
   background: var(--NAVY-BLUE, #2E2F42);
-  padding: 140px 1020px 100px 156px;
-
+  padding: 100px 0;
 }
 .footer-logo {
   color: #4d5ae5;
   font-family: 'Raleway', sans-serif;
-font-size: 18px;
-font-weight: 700;
-line-height: 1.17;
-letter-spacing: 0.03em;
-text-transform: uppercase;
-margin-bottom: 17.5px;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  display: inline-block;
+  margin-bottom: 16px;
 }
 .footer-logo-color {
   color: #f4f4fd
