--- a/css/styles.css
+++ b/css/styles.css
@@ -365,19 +365,28 @@ margin-bottom: 16px;
 
 .media-list{
   display: flex;
-}
-
-.media-list-item {
-  box-sizing: border-box;
-  width: 40px;
-  height: 40px;
-  padding: 8px;
   gap: 16px;
 }
-.media-link {
+
+.media-list-item{
+  width: 40px;
+  height: 40px;
+}
+.media-link{
   width: 100%;
   height: 100%;
   background-color: #4D5AE5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .media-icon {
+  fill: currentColor;
+}
+
+.media-link:hover,
+.media-link:focus{
+  background-color: #31D0AA;
 }
