--- a/css/styles.css
+++ b/css/styles.css
@@ -77,6 +77,23 @@ a{
 
 .header-menu-item {
 }
+
+.header-menu-item:first-child .header-menu-link{
+  color: #404BBF;
+}
+
+.header-menu-item:first-child .header-menu-link::after{
+  display: block;
+  content: '';
+  border-radius: 2px;
+  background: #404BBF;
+  width: 100%;
+  height: 4px;
+  left: 0;
+  bottom: -1px;
+  position: absolute;
+}
+
 .header-menu-link {
     color: #2e2f42;
     font-size: 16px;
@@ -85,6 +102,7 @@ a{
     letter-spacing: 0.02em;
     padding: 24px 0;
     display: block;
+    position: relative;
 }
 
 .header-menu-link:hover,
@@ -187,6 +205,31 @@ color: #404BBF;
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+
+.best-container-icons {
+}
+
+.best-sides-icon-list {
+  display: flex;
+  margin-bottom: 8px;
+}
+.best-sides-icon-item {
+  width: 264px;
+  height: 112px;
+  border-radius: 4px;
+  border: 1px solid var(--LIGHT-SLATE, #8E8F99);
+  background: var(--CLOUD, #F4F4FD);
+  padding-top: 24px;
+}
+.best-sides-icon-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+.best-sides-icon {
+}
+
 .best-sides-list {
   display: flex;
   gap: 24px;
@@ -240,6 +283,10 @@ box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47,
 .img {
 }
 
+.first-pic-name{
+  padding: 32px 0;
+}
+
 .taste-subtitle {
   color: var(--NAVY-BLUE, #2E2F42);
 text-align: center;
@@ -255,10 +302,39 @@ text-align: center;
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
+margin-bottom: 8px;
 }
 
-.first-pic-name{
-  padding: 32px 0;
+.team-container {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+}
+.team-icon-list {
+  display: flex;
+  gap: 24px;
+}
+.team-icon-item {
+  width: 40px;
+  height: 40px;
+}
+.team-icon-link {
+  width: 100%;
+  height: 100%;
+  background-color: #4D5AE5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.team-icon {
+  fill: currentColor;
+}
+
+.team-icon-link:hover,
+.team-icon-link:focus{
+  background-color: #31D0AA;
 }
 
 /* Porfolio */
@@ -295,8 +371,41 @@ margin-bottom: 72px;
   width: calc((100% - 24px * 2) / 3);
 }
 
+.portfolio-item:hover .porfolio-text-wrap{
+  transform: translateY(0);
+}
+
+.portfolio-cover-wrap{
+    position: relative;
+    overflow: hidden;
+}
+
 .portfolio-img {
 }
+
+.porfolio-text-wrap{
+  position: absolute;
+  height: 100%;
+  top: 0;
+  padding-top: 40px;
+  padding-bottom: 164px;
+  padding-right: 32px;
+  padding-left: 32px;
+  background: var(--IRIS, #4D5AE5);
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
+.porfolio-cover-text{
+  color: var(--CLOUD, #F4F4FD);
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
+
 .porfolio-subtitle {
   color: var(--NAVY-BLUE, #2E2F42);
 font-size: 20px;
