--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,12 @@ a{
 }
 
   /* Header */
+
+  .header {
+    border-bottom: 1px solid var(--CORNFLOWER, #E7E9FC);
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+}
+
   .header-logo{
     color: #4d5ae5;
     font-family: 'Raleway', sans-serif;
@@ -56,9 +62,6 @@ a{
     color: #2e2f42;
 }
 
-  .header {
-    border-bottom: 1px solid var(--CORNFLOWER, #E7E9FC);
-}
 .header-navigation {
   display: flex;
   flex-grow: 1;
@@ -103,6 +106,7 @@ a{
     padding: 24px 0;
     display: block;
     position: relative;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-menu-link:hover,
@@ -128,6 +132,7 @@ color: #404BBF;
   color: #434455;
   display: block;
   padding: 24px 0;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact-list-link:hover,
