--- a/css/styles.css
+++ b/css/styles.css
@@ -142,6 +142,8 @@ color: #404BBF;
 
 /* Hero */
 .hero {
+  max-width: 1440px;
+  margin: 0 auto;
   padding-top: 188px;
   padding-bottom: 188px;
   background: var(--NAVY-BLUE, #2E2F42);
@@ -185,6 +187,7 @@ color: #404BBF;
   border: 0;
   min-width: 169px;
   margin-top: 48px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-button:hover,
@@ -226,6 +229,11 @@ color: #404BBF;
   background: var(--CLOUD, #F4F4FD);
   padding-top: 24px;
 }
+
+.best-sides-container{
+  display: flex;
+}
+
 .best-sides-icon-link {
   display: flex;
   align-items: center;
