--- a/css/styles.css
+++ b/css/styles.css
@@ -214,7 +214,7 @@ color: #404BBF;
   overflow: hidden;
 }
 
-.best-container-icons {
+/* .best-container-icons {
 }
 
 .best-sides-icon-list {
@@ -241,7 +241,7 @@ color: #404BBF;
 
 }
 .best-sides-icon {
-}
+} */
 
 .best-sides-list {
   display: flex;
