--- a/css/styles.css
+++ b/css/styles.css
@@ -250,6 +250,18 @@ color: #404BBF;
 .best-sides-list-item {
   width: calc((100% - 24px * 3) / 4)
 }
+
+.best-icon-cotainer{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 264px;
+  height: 112px;
+  background-color: #f4f4fd;
+  border-radius: 4px;
+  margin-bottom: 8px
+}
+
 .best-sides-subtitle {
   color: var(--NAVY-BLUE, #2E2F42);
   font-size: 20px;
