--- a/css/styles.css
+++ b/css/styles.css
@@ -328,7 +328,7 @@ margin-bottom: 8px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .team-icon {
-  fill: currentColor;
+  fill:  #f4f4fd;
 }
 
 .team-icon-link:hover,
