--- a/css/styles.css
+++ b/css/styles.css
@@ -333,7 +333,6 @@ margin-bottom: 8px;
 
 .team-icon-link:hover,
 .team-icon-link:focus{
-  /* background-color: #31D0AA; */
   background-color: #404bbf
 }
 
@@ -369,6 +368,10 @@ margin-bottom: 72px;
   border-radius: 0px 0px 4px 4px;
   background: var(--WHITE, #FFF);
   width: calc((100% - 24px * 2) / 3);
+}
+
+.portfolio-item:hover{
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-item:hover .porfolio-text-wrap{
