--- a/css/styles.css
+++ b/css/styles.css
@@ -371,14 +371,19 @@ margin-bottom: 72px;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-item:hover{
+.portfolio-item{
   transform: translateY(0%);
+}
+
+.portfolio-item:hover{
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-item:hover .porfolio-text-wrap{
   transform: translateY(0%);
 }
+
+/* .cover-container */
 
 .portfolio-cover-wrap{
     position: relative;
