--- a/css/styles.css
+++ b/css/styles.css
@@ -383,9 +383,9 @@ margin-bottom: 72px;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.cover-container:hover{
+/* .cover-container:hover{
   transform: translateY(0%);
-}
+} */
 
 .portfolio-cover-wrap{
     position: relative;
