--- a/css/styles.css
+++ b/css/styles.css
@@ -375,7 +375,7 @@ margin-bottom: 72px;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
-.portfolio-item:hover .porfolio-text-wrap{
+.portfolio-item:hover .porfolio-cover-text{
   transform: translateY(0%);
 }
 
@@ -395,7 +395,7 @@ margin-bottom: 72px;
 .portfolio-img {
 }
 
-.porfolio-text-wrap{
+/* .porfolio-text-wrap{
   position: absolute;
   height: 100%;
   top: 0;
@@ -406,7 +406,7 @@ margin-bottom: 72px;
   background: var(--IRIS, #4D5AE5);
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+} */
 
 
 .porfolio-cover-text{
@@ -416,6 +416,16 @@ margin-bottom: 72px;
   font-weight: 400;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  position: absolute;
+  height: 100%;
+  top: 0;
+  padding-top: 40px;
+  padding-bottom: 164px;
+  padding-right: 32px;
+  padding-left: 32px;
+  background: var(--IRIS, #4D5AE5);
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .porfolio-subtitle {
