--- a/css/styles.css
+++ b/css/styles.css
@@ -391,19 +391,6 @@ margin-bottom: 72px;
 .portfolio-img {
 }
 
-/* .porfolio-text-wrap{
-  position: absolute;
-  height: 100%;
-  top: 0;
-  padding-top: 40px;
-  padding-bottom: 164px;
-  padding-right: 32px;
-  padding-left: 32px;
-  background: var(--IRIS, #4D5AE5);
-  transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-} */
-
 
 .porfolio-cover-text{
   color: var(--CLOUD, #F4F4FD);
@@ -467,10 +454,14 @@ max-width: 264px;
 
 .footer-container{
   display: flex;
+  align-items: baseline;
+}
+
+.logo-paragraph{
+  margin-right: 120px;
 }
 
 .social-media{
-  margin-left: 120px;
 }
 
 .media-text {
@@ -507,7 +498,7 @@ margin-bottom: 16px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .media-icon {
-  fill: currentColor;
+  fill: #f4f4fd;
 }
 
 .media-link:hover,
