--- a/css/styles.css
+++ b/css/styles.css
@@ -281,8 +281,6 @@ box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47,
 
 .first-pic-name{
   padding: 32px 0;
-  /* display: flex;
-  justify-content: center; */
 }
 
 .taste-subtitle {
@@ -504,4 +502,87 @@ margin-bottom: 16px;
 .media-link:hover,
 .media-link:focus{
   background-color: #31D0AA;
+}
+
+/* BACKDROP */
+
+.backdrop{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.40));;
+}
+
+.modal{
+  width: 408px;
+  min-height: 584px;
+  border-radius: 4px;
+  background-color: var(--DAIRY, #FCFCFC);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 24px; 
+}
+
+.modal-button {
+  background-color: transparent;
+  border: none;
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #E7E9FC;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 0;
+  cursor: pointer;
+}
+
+.modal-button-icon {
+  fill: #2E2F42;
+}
+
+.modal-title{
+  color: var(--NAVY-BLUE, #2E2F42);
+  text-align: center;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  text-align: left;
+  margin-top: 36px;
+  margin-bottom: 16px;
+}
+
+.modal-input{
+  width: 100%;
+  height: 40px;
+  border-radius: 4px;
+  border: 1px solid var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.40));
+  background-color: transparent;
+  margin-bottom: 8px;
+}
+
+.modal-form-button{
+  cursor: pointer;
+  padding: 16px 32px;
+  color: var(--WHITE, #FFF);
+  text-align: center;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5; 
+  letter-spacing: 0.04em;
+  border-radius: 4px;
+  background: var(--IRIS, #4D5AE5);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  border: none;
+  display: block;
+  margin: 0 auto;
 }
