--- a/css/styles.css
+++ b/css/styles.css
@@ -512,7 +512,17 @@ margin-bottom: 16px;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.40));;
+  background-color: var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.40));
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visability 250ms cubic-bezier(0.4, 0, 0.2, 1)
+}
+
+.is-open{
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
 }
 
 .modal{
@@ -543,10 +553,23 @@ margin-bottom: 16px;
   border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 0;
   cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);;
+}
+
+.modal-button:hover,
+.modal-button:focus{
+  background-color: #404BBF;
+  border: none;
 }
 
 .modal-button-icon {
   fill: #2E2F42;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-button:hover .modal-button-icon,
+.modal-button:focus .modal-button-icon{
+  fill: #FFFFFF;
 }
 
 .modal-title{
@@ -561,13 +584,34 @@ margin-bottom: 16px;
   margin-bottom: 16px;
 }
 
+.modal-field{
+  margin-bottom: 8px;
+}
+
+.modal-label{
+  display: block;
+  color: var(--LIGHT-SLATE, #8E8F99);
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  margin-bottom: 4px;
+}
+
 .modal-input{
   width: 100%;
   height: 40px;
   border-radius: 4px;
   border: 1px solid var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.40));
   background-color: transparent;
-  margin-bottom: 8px;
+  padding-left: 38px;
+  outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  /* color: #000000; */
+}
+
+.modal-input:focus{
+  border-color: #4D5AE5;
 }
 
 .modal-form-button{
@@ -580,9 +624,61 @@ margin-bottom: 16px;
   line-height: 1.5; 
   letter-spacing: 0.04em;
   border-radius: 4px;
-  background: var(--IRIS, #4D5AE5);
+  background-color: #4D5AE5;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   border: none;
   display: block;
   margin: 0 auto;
+  width: 169px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-button:hover,
+.modal-form-button:focus{
+  background-color: #404BBF;
+}
+
+.input-wrap{
+  position: relative;
+}
+
+.modal-icon{
+  fill: #2E2F42;
+  position: absolute;
+  left: 16px;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input:focus + .modal-icon{
+  fill: #4D5AE5;
+}
+
+.modal-textarea{
+  /* width: 360px;
+  height: 120px;
+  border-radius: 4px;
+  border: 1px solid var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.40));
+  padding-top: 8px;
+  padding-left: 16px;
+  padding-right: 287px;
+  outline: none;
+  resize: none; */
+  width: 100%;
+  height: 120px;
+  padding-top: 8px;
+  padding-left: 16px;
+  border-radius: 4px;
+  border: 1px solid var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.40));
+  outline: transparent;
+  resize: none;
+}
+
+.modal-textarea::placeholder{
+  color: var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.40));
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.17; 
+  letter-spacing: 0.04em;
 }
