--- a/css/styles.css
+++ b/css/styles.css
@@ -519,6 +519,7 @@ margin-bottom: 16px;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visability 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 
+/* до бекдропа може прописати */
 .is-open{
   opacity: 1;
   visibility: visible;
