--- a/css/styles.css
+++ b/css/styles.css
@@ -504,6 +504,49 @@ margin-bottom: 16px;
   background-color: #31D0AA;
 }
 
+.footer-wrapper{
+  margin-left: 80px;
+}
+
+.wrapper-text{
+  color: #FFF;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  margin-bottom: 16px;
+}
+
+.footer-input{
+  width: 264px;
+  height: 40px;
+  border-radius: 4px;
+  border: 1px solid var(--WHITE, #FFF);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  border-color: transparent;
+  outline: transparent;
+  padding-left: 16px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  background-color: #2E2F42;
+}
+
+.footer-input::placeholder{
+  font-family: Roboto;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 2; 
+  letter-spacing: 0.04em;
+}
+
+.footer-form-button{
+  width: 165px;
+  height: 40px;
+  padding: 8px 24px;
+  border-radius: 4px;
+  background-color: #4D5AE5;
+}
+
 /* BACKDROP */
 
 .backdrop{
@@ -519,7 +562,7 @@ margin-bottom: 16px;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visability 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 
-/* до бекдропа може прописати */
+/* add to backdrop html to make it working */
 .is-open{
   opacity: 1;
   visibility: visible;
@@ -674,6 +717,11 @@ margin-bottom: 16px;
   border: 1px solid var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.40));
   outline: transparent;
   resize: none;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-textarea:focus{
+  border-color: #4D5AE5;
 }
 
 .modal-textarea::placeholder{
@@ -682,4 +730,47 @@ margin-bottom: 16px;
   font-weight: 400;
   line-height: 1.17; 
   letter-spacing: 0.04em;
+}
+
+.modal-check-field{
+  margin-bottom: 24px;
+}
+
+.check-text{
+  color: var(--LIGHT-SLATE, #8E8F99);
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  display: flex;
+  align-items: center;
+}
+
+.check-text a{
+  color: #4D5AE5;
+  text-decoration: underline;
+}
+
+.check-text-span{
+  display: block;
+  width: 16px;
+  height: 16px;
+  border: 1px solid rgba(46, 47, 66, 0.40);
+  border-radius: 2px;
+  margin-right: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  fill: transparent;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+              border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+              fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.check-text-icon{
+}
+
+.modal-check:checked + .check-text > .check-text-span{
+  background-color: #404BBF;
+  border: none;
+  fill: #F4F4FD;
 }
