--- a/css/styles.css
+++ b/css/styles.css
@@ -517,21 +517,25 @@ margin-bottom: 16px;
   margin-bottom: 16px;
 }
 
+.footer-label{
+}
+
 .footer-input{
   width: 264px;
   height: 40px;
   border-radius: 4px;
   border: 1px solid var(--WHITE, #FFF);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-  border-color: transparent;
   outline: transparent;
   padding-left: 16px;
   padding-top: 8px;
   padding-bottom: 8px;
   background-color: #2E2F42;
+  position: relative;
 }
 
 .footer-input::placeholder{
+
   font-family: Roboto;
   font-size: 12px;
   font-weight: 400;
@@ -540,11 +544,21 @@ margin-bottom: 16px;
 }
 
 .footer-form-button{
+  color: #FFFFFF;
   width: 165px;
   height: 40px;
   padding: 8px 24px;
   border-radius: 4px;
   background-color: #4D5AE5;
+  border: none;
+  cursor: pointer;
+}
+
+.footet-telegram{
+  position: absolute;
+  align-items: center;
+  justify-content: center;
+  margin-left: 16px;
 }
 
 /* BACKDROP */
