--- a/css/styles.css
+++ b/css/styles.css
@@ -552,6 +552,12 @@ margin-bottom: 16px;
   background-color: #4D5AE5;
   border: none;
   cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-form-button:focus,
+.footer-form-button:hover{
+  background-color: #404BBF;
 }
 
 .footet-telegram{
