--- a/css/styles.css
+++ b/css/styles.css
@@ -517,6 +517,11 @@ margin-bottom: 16px;
   margin-bottom: 16px;
 }
 
+.footer-form{
+  display: flex;
+  gap: 24px;
+}
+
 .footer-label{
 }
 
@@ -532,10 +537,16 @@ margin-bottom: 16px;
   padding-bottom: 8px;
   background-color: #2E2F42;
   position: relative;
+  background-color: transparent;
+  font-size: 12px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  color: #FFFFFF;
 }
 
 .footer-input::placeholder{
-
+  color: #FFFFFF;
   font-family: Roboto;
   font-size: 12px;
   font-weight: 400;
@@ -545,13 +556,19 @@ margin-bottom: 16px;
 
 .footer-form-button{
   color: #FFFFFF;
-  width: 165px;
+  min-width: 165px;
   height: 40px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
   padding: 8px 24px;
   border-radius: 4px;
   background-color: #4D5AE5;
   border: none;
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -561,9 +578,7 @@ margin-bottom: 16px;
 }
 
 .footet-telegram{
-  position: absolute;
-  align-items: center;
-  justify-content: center;
+  margin-left: 16px;
 }
 
 /* BACKDROP */
