--- a/css/styles.css
+++ b/css/styles.css
@@ -593,7 +593,7 @@ margin-bottom: 16px;
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visability 250ms cubic-bezier(0.4, 0, 0.2, 1)
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* add to backdrop html to make it working */
@@ -608,11 +608,14 @@ margin-bottom: 16px;
   min-height: 584px;
   border-radius: 4px;
   background-color: var(--DAIRY, #FCFCFC);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   padding: 24px; 
+  padding: 72px 24px 24px 24px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-button {
@@ -658,12 +661,12 @@ margin-bottom: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-align: left;
-  margin-top: 36px;
   margin-bottom: 16px;
+  text-align: center;
 }
 
 .modal-field{
-  margin-bottom: 8px;
+  margin-top: 8px;
 }
 
 .modal-label{
@@ -707,7 +710,7 @@ margin-bottom: 16px;
   border: none;
   display: block;
   margin: 0 auto;
-  width: 169px;
+  min-width: 169px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -734,24 +737,19 @@ margin-bottom: 16px;
 }
 
 .modal-textarea{
-  /* width: 360px;
-  height: 120px;
-  border-radius: 4px;
-  border: 1px solid var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.40));
-  padding-top: 8px;
-  padding-left: 16px;
-  padding-right: 287px;
-  outline: none;
-  resize: none; */
   width: 100%;
   height: 120px;
-  padding-top: 8px;
-  padding-left: 16px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+  background-color: transparent;
+  padding: 8px 16px;
   border-radius: 4px;
   border: 1px solid var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.40));
   outline: transparent;
   resize: none;
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-textarea:focus{
@@ -791,7 +789,7 @@ margin-bottom: 16px;
   border: 1px solid rgba(46, 47, 66, 0.40);
   border-radius: 2px;
   margin-right: 8px;
-  display: flex;
+  display: inline-flex;
   align-items: center;
   justify-content: center;
   fill: transparent;
