--- a/css/styles.css
+++ b/css/styles.css
@@ -216,10 +216,12 @@ color: #404BBF;
 
 .best-sides-list {
   display: flex;
-  gap: 24px;
+  /* gap: 20px; */
+  gap: 72px;
+  flex-wrap: wrap;
 }
 .best-sides-list-item {
-  width: calc((100% - 24px * 3) / 4)
+  width: 100%;
 }
 
 .best-icon-cotainer{
@@ -808,4 +810,10 @@ margin-bottom: 16px;
   background-color: #404BBF;
   border: none;
   fill: #F4F4FD;
+}
+
+@media screen and (min-width: 320px) {
+  .container{
+    max-width: 318px;
+  }
 }
