--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,7 @@ a{
 
 .container{
   max-width: 1158px;
-  padding: 0 15px;
+  padding: 0 16px;
   margin: 0 auto;
 }
 
@@ -814,6 +814,14 @@ margin-bottom: 16px;
 
 @media screen and (min-width: 320px) {
   .container{
-    max-width: 318px;
+    max-width: 288px;
+    padding: 0 16px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container{
+    max-width: 736px;
+    padding: 0 16px;
   }
 }
