--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,6 @@ a{
 
 .container{
   max-width: 1158px;
-  padding: 0 16px;
   margin: 0 auto;
 }
 
@@ -198,8 +197,8 @@ color: #404BBF;
 
 /* Best Sides */
 .best-sides {
-  padding-top: 120px;
-  padding-bottom: 120px;
+  padding-top: 96px;
+  padding-bottom: 96px;
 }
 .visually-hidden {
   position: absolute;
@@ -215,10 +214,10 @@ color: #404BBF;
 }
 
 .best-sides-list {
-  display: flex;
-  /* gap: 20px; */
   gap: 72px;
   flex-wrap: wrap;
+  display: flex;
+  /* gap: 20px; */
 }
 .best-sides-list-item {
   width: 100%;
@@ -237,11 +236,13 @@ color: #404BBF;
 
 .best-sides-subtitle {
   color: var(--NAVY-BLUE, #2E2F42);
-  font-size: 20px;
-  font-weight: 500;
+  font-size: 36px;
+  font-weight: 700;
   line-height: 1.2;
   letter-spacing: 0.02em;
   margin-bottom: 8px;
+  color: var(--NAVY-BLUE, #2E2F42);
+  text-align: center;
 }
 .best-sides-text {
   color: var(--SLATE, #434455);
@@ -253,8 +254,8 @@ letter-spacing: 0.02em;
 /* Team */
 .team {
   background-color: #F4F4FD;
-  padding-top: 120px;
-  padding-bottom: 120px;
+  padding-top: 96px;
+  padding-bottom: 96px;
 }
 
 .team-title {
@@ -269,16 +270,19 @@ margin-bottom: 72px;
 
 .team-list {
   display: flex;
-  gap: 24px;
+  flex-wrap: wrap;
+  gap: 72px;
 }
 
 .team-item {
+  width: 100%;
   background-color: #FFFFFF;
   border-radius: 0px 0px 4px 4px;
-background: var(--WHITE, #FFF);
-box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+  background: var(--WHITE, #FFF); 
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 .img {
+  margin: 0 auto;
 }
 
 .first-pic-name{
@@ -812,16 +816,66 @@ margin-bottom: 16px;
   fill: #F4F4FD;
 }
 
-@media screen and (min-width: 320px) {
+/* @media screen and (min-width: 320px) {
   .container{
     max-width: 288px;
-    padding: 0 16px;
   }
+} */
+
+.container {
+  max-width: 320px;
+  padding-left: 16px;
+  padding-right: 16px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 @media screen and (min-width: 768px) {
   .container{
-    max-width: 736px;
-    padding: 0 16px;
+    max-width: 768px;
+  }
+  .best-sides-list{
+    gap: 72px 24px;
+  }
+  .best-sides-list-item{
+    width: calc((100% - 24px) /2);
+  }
+  .team-list{
+    gap: 64px 24px;
+  }
+  .team-item{
+    width: calc((100% - 24px) /2);
+  }
+}
+
+@media screen and (min-width: 1400px){
+  .container{
+    max-width: 1158px;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+  .best-sides-list{
+    gap: 24px;
+  }
+  .best-sides-list-item{
+    width: calc((100% - 72px) /4);
+  }
+  .best-sides{
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
+  .best-sides-subtitle{
+    font-size: 20px;
+    font-weight: 500;
+  }
+  .team{
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
+  .team-list{
+    gap: 24px;
+  }
+  .team-item{
+    width: calc((100% - 96px) /4);
   }
 }
